        o 'quant2ecdf'    : -) Detection of 'matrix' and 'data.frame' class for its first argument is now made with the 'is' function, in order to be compatible with R 4.0.0

0.4-1	12-Jun-2018
        o 'Keywords' field removed after CRAN request.
        o DOI added just after zenodo created it, based on Github realease 0.4-0

0.4-0	10-Jun-2018
        o Repository management moved from SVN to GIT, first using rforge and finally using Github.
        o Main page in Github list articles reporting the use of hydroPSO until May 31th 2018.
        o Package tested against R version 3.5.0 (2018-04-23) -- "Joy in Playing", following the request made by CRAN.
        o TRAVIS CI used to test source code against stable and development R versions.
        o zenodo used to manage DOI of different versions of the package

0.3-4-6	09-May-2016
        o New field 'Additional_repositories' in the DESCRIPTION file, following the instructions given by CRAN.
        o Minor modification of the 'Description' field, following the instructions given by CRAN (avoiding redundancies).
        o CITATION file modified to allow working without package installed (following CRAN request). 
        o DOI field added to CITATION file.
        o CRAN website removed from URL field in DESCRIPTION file (following CRAN request).
        o 'read_out'    : observations (in 'obs' or 'Observations.txt') are allowed to be of class (Date", "POSIXct", "POSIXt"), not only 'Date' as before this enhancement.
        o 'plot_results': observations (obtained with 'read_results.txt') are allowed to be of class (Date", "POSIXct", "POSIXt"), not only 'Date' as before this enhancement.
        o 'hydroPSO'    : -) Issue #4. hydroPSO is now able to optimise 1D functions, both R-defined functions or R-external model codes (Thanks to Azza Ahmed and @cjzilverberg!). 
                          -) Issue #3. hydroPSO now is able to correctly apply the 'method="wfips"' when 'topology="random"' (Thanks to @drknexus !). 